Add outline for conclusion

--- a/main.tex
+++ b/main.tex
@@ -751,7 +751,19 @@ For the squares we will be using the following values for our comparison of the 
 \end{itemize}
 
 
+% ----------------------
+\section{Conclusion}
+% ----------------------
 
+\begin{itemize}
+  \item Four types of glyphs were compared to each other using stacking order algorithms: (1) Centered nested disks, (2) nested disks, (3) Pie charts, and (4) squares.
+  \item It was shown that it is NP-hard to decide, whether for a given set $D$ of disks with boundary points $P_i$ there is a physical realization (with rotation) such that the minimum distance of any of the distinguished points $p_i$ to the next covered point along the perimeter of its perimeter is greater or equal to $k$.
+  \item In a very similar approach, squares as glyphs can be treated in proportional symbol maps.
+  \item Utility is hard to impossible to be compared among glyphs of different types. However,
+  \item discs can be compared to each other
+  \item pies and squares can be compared to each other
+  \item Runtime is similar and in the order of $O(n^3)$, however, can be brought down to $O(n^2 \log n)$ with good choice of data structures.
+\end{itemize}
 
 
 
