--- a/main.tex
+++ b/main.tex
@@ -758,7 +758,6 @@ For the pie Charts we will be using the following values for our comparison of t
 
       our Stacking                        & 7       & 0.078 (0) & 25.232     \\
 
-
       \hline
     \end{tabular}
   \end{center}
@@ -807,18 +806,21 @@ For the squares we will be using the following values for our comparison of the 
 
 
 % ----------------------
-\section{Conclusion}
+\section{Conclusion \& Discussion}
 % ----------------------
 
 \begin{itemize}
   \item Four types of glyphs were compared to each other using stacking order algorithms: (1) Centered nested disks, (2) nested disks, (3) Pie charts, and (4) squares.
   \item It was shown that it is NP-hard to decide, whether for a given set $D$ of disks with boundary points $P_i$ there is a physical realization (with rotation) such that the minimum distance of any of the distinguished points $p_i$ to the next covered point along the perimeter of its perimeter is greater or equal to $k$.
-  \item In a very similar approach, squares as glyphs can be treated in proportional symbol maps.
+  \item In a very similar manner squares as glyphs can be treated in proportional symbol maps in our approach.
   \item Utility is hard to impossible to be compared among glyphs of different types. However,
-  \item discs can be compared to each other
-  \item pies and squares can be compared to each other
+  \item discs can be compared to each other,
+  \item pies and squares can be compared to each other.
+  \item The pie-chart approach enables an improvement for the squares [TODO: R: Don't get it, yet].
   \item Runtime is similar and in the order of $O(n^3)$, however, can be brought down to $O(n^2 \log n)$ with good choice of data structures.
 \end{itemize}
+
+Maybe we talk about the nature of the given data and relate it to the glyph. Especially considering the squares.
 
 \newpage
 
