Add soft discussion on glyphs

--- a/main.tex
+++ b/main.tex
@@ -819,6 +819,7 @@ For the squares we will be using the following values for our comparison of the 
   \item The pie-chart approach enables an improvement for the squares [TODO: R: Don't get it, yet].
   \item Runtime is similar and in the order of $O(n^3)$, however, can be brought down to $O(n^2 \log n)$ with good choice of data structures.
   \item Nevertheless, some heuristics is necessary
+  \item Glyphen are a trade-off between content and comparability
 \end{itemize}
 
 Maybe we talk about the nature of the given data and relate it to the glyph. Especially considering the squares.
