Expand experimental section and correct errors

--- a/main.tex
+++ b/main.tex
@@ -620,9 +620,9 @@ We can get a good solution with the help of pie charts. For every square we cons
 \section{Experimental validation}
 % ----------------------
 
-We will now compare our stacking algorithms with other stacking methods which are mainly used for visualization of proportional symbol maps. The lab was motivated by the visualization of COVID-19 data. Therefore we will be using the JHU CSSE COVID-19 Data which is given in \cite{data}. The dataset is updated daily and provides data for every day since January 2020. Hence, we have a plethora of data for our experiments.
+We will now compare our stacking algorithms with other stacking methods which are mainly used for visualization of proportional symbol maps. The lab was motivated by the visualization of COVID-19 data. Therefore we will be using the JHU CSSE COVID-19 Data which is given in \cite{data}. The dataset is updated daily and provides data for every day since January 2020. Hence, we have a plethora\footnote{As the data is collected at several points in time under fluctuating political circumstances we have chosen the most trustworthy source. Nevertheless, by simply looking sharply at the data it is obvious that the data is to be taken with a grain of salt.} data for our experiments.
 
-We will only cherry pick a few data sets as the data quality naturally varies, however, the reader may use our application to look at the results for different dates and inspect interesting data sets in detail. Further, we will always use three features, namely: (1) confirmed deaths, (2) confirmed recovered, and (3) overall confirmed cases of a country.
+We will only cherry pick a few data sets as the data quality naturally varies, however, the reader may use our application to look at the results for different dates and inspect interesting data sets in detail. Further, we will always use three features, namely:  the unfortunate (1) confirmed deaths [color: black], (2) confirmed recovered [color: green], and (3) overall confirmed cases [color red] of a country.
 
 Since some countries dominate the rest of the countries with regards to the number of cases we scale logarithmically and add 1 to the data to avoid zero radii. To diversify our data sets even more we use three additional parameters in our data preparation: (1) the minimum number of cases to be depicted, (2) a maximum "size" $M$ of the glyphs in dependence of the glyph's type, and (3) a scaling factor $S$. If we denote the maximal number of confirmed cases in one country by $c_{max}$ then the radius $r$ of the disc of some country with confirmed cases $c$ is given by:
 
@@ -711,7 +711,7 @@ Our algorithm is designed to maximize the value found in the second column and o
 
 In this algorithm, we stack the disks greedly again, but only care for the local utility of the biggest disk at first. Then, since the disks do not have to be centered, we nest the inner disks such that their boundaries touch in a single point. This point is the midpoint of the longest consecutively visible interval of the outer disk's boundary. We can already note a much better performance. Note that the dataset is the same as in the previous example. The increased flexibility of the glyphs makes it possible to attain a utility greater than $0$ and allows our algorithm to really harness its potential.
 
-Both our algorithm and the painters algorithm (also using the subroutine described above for the inner disks) arrange all disks such that they are visible. This is already far better than any of the more naive comparison algorithms. Our algorithm then strongly outperforms the painters algorithm on relative visibility and ties in the absolute. This is interesting since, in this case, our algorithm is not guaranteed to return an optimal stacking because our subroutine not necessarily maximizes the local utility of the non-centerd glyph.
+Both our algorithm and the painters algorithm (also using the subroutine described above for the inner disks) arrange all disks such that they are visible. This is already far better than any of the more naive comparison algorithms. Our algorithm then strongly outperforms the painters algorithm on relative visibility and ties in the absolute. This is interesting since, in this case, our algorithm is not guaranteed to return an optimal stacking because our subroutine not necessarily maximizes the local utility of the non-centered glyph.
 
 
 \subsection*{Pie Charts}
